syntax = "proto3";

package hello.laforge.tech;

message HelloRequest {
    string name = 1;
}

message HelloReply {
    string message = 1;
}

service HelloService {
    rpc Hello (HelloRequest) returns (HelloReply);
}
